# liboscore

./: .gitlab-ci.yml  .gitmodules  API-SKETCH.rst  README-other  README.md  README.rst
backends/libc/inc/oscore_native/: platform.h
backends/libcose/inc/oscore_native/: crypto_type.h
backends/libcose/src/: libcose.c
backends/mockoap/inc/: mockoap.h
backends/mockoap/inc/oscore_native/: msg_type.h
backends/mockoap/oscore_native/: msg_type.h
backends/mockoap/src/: oscore_msg.c  oscore_test.c
backends/nanocoap/inc/: nanocoap_oscore_msg_conversion.h
backends/nanocoap/inc/oscore_native/: msg_type.h
backends/nanocoap/src/: oscore_msg.c  oscore_msg_native.c  oscore_test.c
backends/riot-module/: Makefile  Makefile.dep  Makefile.include  README  README.md  context_b1.c  contextpair.c  libcose.c  oscore_message.c  oscore_msg.c  oscore_msg_native.c  oscore_test.c  protection.c
backends/riot-modules/oscore/: Makefile  Makefile.dep  Makefile.include  README.md
doc/: Doxyfile
doc/guides/: demo.md  demo_common.md  demo_iotlab.md  demo_peertopeer.md  demo_plugtest_linux.md  design.md  full_integration.md  integration_levels.md  light_integration.md  light_integration_usage.md  message_api.md  original_api_notes.md  structbased_integration.md  structbased_integration.mw
doc/pseudosrc/: doc.txt
doc/pseudosrc/oscore_native/: crypto_type.h  msg_type.h  platform.h
rust/: Cargo.toml  NEWS.md
rust/liboscore/: Cargo.toml  LICENSE.md  README.md  build.rs  oscore_all_headers.h
rust/liboscore-backends-standalone/: Cargo.toml  README.md
rust/liboscore-backends-standalone/src/: lib.rs
rust/liboscore-cryptobackend/: Cargo.toml  cbindgen.toml
rust/liboscore-cryptobackend-aead/: .gitignore  Cargo.toml  Makefile  cbindgen.toml
rust/liboscore-cryptobackend-aead-standalone/: Cargo.toml
rust/liboscore-cryptobackend-aead-standalone/src/: lib.rs
rust/liboscore-cryptobackend-aead/c-headers/oscore_native/: crypto_type.h
rust/liboscore-cryptobackend-aead/examples/: single-encrypt.rs
rust/liboscore-cryptobackend-aead/src/: lib.rs
rust/liboscore-cryptobackend-hkdf/: Cargo.toml
rust/liboscore-cryptobackend-hkdf/src/: lib.rs
rust/liboscore-cryptobackend/examples/: single-encrypt.rs
rust/liboscore-cryptobackend/src/: aead.rs  hkdf.rs  lib.rs
rust/liboscore-msgbackend/: Cargo.toml  cbindgen.toml
rust/liboscore-msgbackend/src/: lib.rs
rust/liboscore/oscore_native/: platform.h
rust/liboscore/src/: algorithms.rs  impl_message.rs  lib.rs  oscore_option.rs  platform.rs  primitive.rs  raw.rs
src/: context_b1.c  context_primitive.c  contextpair.c  oscore_message.c  protection.c
src/doc/: README.md  README.rst
src/doc/oscore_native/: README.md  crypto_type.h  msg_type.h
src/include/oscore/: README.md  contextpair.h  doc.txt  helpers.h  message.h  protection.h  test.h
src/include/oscore/context_impl/: b1.h  primitive.h
src/include/oscore_native/: crypto.h  doc.txt  message.h  test.h
tests/: .gitignore  Makefile  Makefile.libcose  Makefile.mockoap  cryptobackend-aead.c  standalone-demo.c  unprotect-demo.c
tests/cases/: Makefile.include  cryptobackend-aead.c  cryptobackend-hkdf.c  standalone-demo.c  unit-contextpair-window.c  unprotect-demo.c
tests/native/: .gitignore  Makefile  Makefile.libcose  Makefile.mockoap  Makefile.rustaead  Makefile.rustcrypto  testwrapper.c
tests/native-rust/: Cargo.toml  build.rs  oscore_all_headers.h
tests/native-rust/src/: impl_message.rs  main.rs  unprotect_demo.rs
tests/native/rustbuilthdr/oscore_native/: crypto_type.h
tests/riot-tests/: Makefile.include  test-evaluator.sh
tests/riot-tests/cryptobackend-aead/: Makefile  cryptobackend-aead.c
tests/riot-tests/cryptobackend-hkdf/: cryptobackend-hkdf.c
tests/riot-tests/plugtest-server/: Makefile  demo-server.c  demo-server.h  intermediate-integration-helpers.h  intermediate-integration.c  intermediate-integration.h  oscore-key-derivation  persistence.c  persistence.h  plugtest-resources.inc  plugtest-server.c  plugtest-server.h  resources.inc
tests/riot-tests/stanalone-demo/: Makefile  standalone-demo.c
tests/riot-tests/standalone-demo/: Makefile  standalone-demo.c
tests/riot-tests/testwrapper/: testwrapper.c
tests/riot-tests/unprotect-demo/: Makefile  unprotect-demo.c
