[package]
name = "liboscore-backends-standalone"
version = "0.1.0"
authors = ["chrysn <chrysn@fsfe.org>"]
edition = "2018"
license = "BSD-3-Clause"

[lib]
crate-type = ["staticlib"]

[dependencies]
liboscore-cryptobackend = { path = "../liboscore-cryptobackend", features = ["chacha20poly1305", "aes-gcm", "aes-ccm" ] }

[profile.release]
opt-level = "s"
lto = true
debug = 1
