[package]
name = "liboscore-cryptobackend"
version = "0.1.0"
authors = ["chrysn <chrysn@fsfe.org>"]
edition = "2018"

[dependencies]
aead = { version = "0.5", default-features = false }
typenum = "1"
heapless = "0.7"

chacha20poly1305 = { version = "0.10", optional = true, default-features = false }
ccm = { version = "0.5", optional = true, default-features = false }
aes = { verson = "0.8", optional = true }
aes-gcm = { version = "0.10", default-features = false, optional = true, features = ["aes"] }

crypto-common = { version = "0.1", default-features = false }
hmac = { version = "0.12", default-features = false }
hkdf = { version = "0.12", default-features = false }
sha2 = { version = "0.10", default-features = false }

[features]
aes-ccm = [ "ccm", "aes" ]
