[package]
name = "liboscore-msgbackend"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
coap-message = "0.2.3"
coap-message-utils = "0.2.2"

[features]
# Wrap the coap_message::heapmessage, and provide the oscore_test_msg functions
# for allocating and freeing one
#
# When running tests, this is generally required.
alloc = [ "coap-message/alloc" ]
