[package]
name = "liboscore-msgbackend"
description = "An implementation of libOSCORE's CoAP messages based on the coap-message crate"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
coap-message = "0.2.3"
coap-message-utils = "0.2.2"

[features]
# Wrap the coap_message::heapmessage, and provide the oscore_test_msg functions
# for allocating and freeing one
#
# When running tests, this is generally required.
alloc = [ "coap-message/alloc" ]
