[package]
name = "liboscore-msgbackend"
description = "An implementation of libOSCORE's CoAP messages based on the cjGoap-message crate"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true

[dependencies]
coap-message = "0.3.1"
coap-message-implementations = "0.1.1"
coap-numbers = "0.2.3"

[features]
# Wrap the coap_message::heapmessage, and provide the oscore_test_msg functions
# for allocating and freeing one
#
# When running tests, this is generally required.
alloc = [ "coap-message-implementations/alloc" ]
