[package]
name = "liboscore"
version = "0.1.0"
authors = [ "EDF, developed in collaboration with Christian Amsüss" ]
edition = "2021"
license = "BSD-3-Clause"

# More like "builds and includes"; this matters so that we can pass on
# PLATFORMHEADERS as DEP_LIBOSCORE_PLATFORMHEADERS
links = "liboscore"

[dependencies]
liboscore-cryptobackend = { path = "../liboscore-cryptobackend", features = ["chacha20poly1305", "aes-gcm", "aes-ccm" ] }
liboscore-msgbackend = { path = "../liboscore-msgbackend" }

coap-message = "0.2"
coap-message-utils = "0.2.2"

# Only for Debug implementations
pretty-hex = { version = "0.3", default-features = false }

[build-dependencies]
cc = "1"
bindgen = "0.63"
cbindgen = "0.24"
