[package]
name = "liboscore-tests-native-rust"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
liboscore-cryptobackend = { path = "../../rust/liboscore-cryptobackend", features = ["chacha20poly1305", "aes-gcm", "aes-ccm" ] }
liboscore-msgbackend = { path = "../../rust/liboscore-msgbackend", features = [ "alloc" ] }

[build-dependencies]
cc = "1"
