[package]
name = "liboscore-tests-native-rust"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
liboscore = { path = "../../rust/liboscore" }
# temporarily
liboscore-msgbackend = { path = "../../rust/liboscore-msgbackend", features = [ "alloc" ] }

coap-message = "0.3.1"
coap-message-implementations = { version = "0.1.1", features = [ "alloc" ] }

[build-dependencies]
cc = "1"
